--- a/Capstone/src/ui/DashboardPanel.form
+++ b/Capstone/src/ui/DashboardPanel.form
@@ -311,11 +311,12 @@
           <component id="fb4d1" class="javax.swing.JTable" binding="itemDetail">
             <constraints>
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+                <preferred-size width="150" height="80"/>
               </grid>
             </constraints>
             <properties>
               <background color="-854793"/>
+              <intercellSpacing width="1" height="1"/>
             </properties>
           </component>
           <vspacer id="1cae3">
