--- a/Capstone/src/ui/PayoutsPanel.form
+++ b/Capstone/src/ui/PayoutsPanel.form
@@ -184,7 +184,7 @@
         <properties>
           <background color="-13726737"/>
           <enabled value="true"/>
-          <foreground color="-14013132"/>
+          <foreground color="-854793"/>
           <hideActionText value="false"/>
           <text value="Transfer"/>
         </properties>
